<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.todolist.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/actionbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:showIn="@layout/activity_new">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_label">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_title"
                android:inputType="textCapSentences"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/placeholder_title"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_label"
            android:layout_below="@+id/title_label">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:id="@+id/et_description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/placeholder_description"
                android:layout_alignRight="@+id/title_label"
                android:layout_alignEnd="@+id/title_label"
                android:minLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_label"
            android:layout_below="@+id/description_label"
            android:layout_toStartOf="@+id/button_date"
            android:layout_toLeftOf="@+id/button_date">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/tv_date"
                android:hint="@string/select_time"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@+id/description_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/button_date"
                android:layout_toStartOf="@+id/button_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_date"
            android:onClick="showDatePickerDialog"
            android:text="@string/action_calendar"
            android:src="@drawable/ic_calendar"
            android:drawableLeft="@drawable/ic_calendar"
            android:layout_below="@+id/description_label"
            android:layout_toLeftOf="@+id/button_time"
            android:layout_toStartOf="@+id/button_time"
            android:layout_alignBottom="@+id/date_label" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_time"
            android:src="@drawable/ic_time"
            android:id="@+id/button_time"
            android:onClick="showTimePickerDialog"
            android:layout_below="@+id/description_label"
            android:layout_toLeftOf="@+id/remove_date_button"
            android:layout_toStartOf="@+id/remove_date_button"
            android:layout_alignBottom="@+id/button_date"
            android:layout_alignWithParentIfMissing="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remove_date_button"
            android:src="@drawable/ic_close_black"
            android:layout_below="@+id/description_label"
            android:layout_alignRight="@+id/description_label"
            android:layout_alignEnd="@+id/description_label"
            android:layout_alignBottom="@+id/button_time"
            android:onClick="removeDateButton"
            android:nestedScrollingEnabled="false"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
